--- a/components/admin/app/views/admin/customers/index.html.haml
+++ b/components/admin/app/views/admin/customers/index.html.haml
@@ -8,7 +8,7 @@
 .panel-body
   .row  
     .col-md-12
-      %table.table.table-striped.table-hover
+      %table.table.table-striped.table-hover.table-bordered
         %thead 
           %tr
             %th Cod.
