--- a/components/site/app/views/layouts/site/application.html.haml
+++ b/components/site/app/views/layouts/site/application.html.haml
@@ -8,7 +8,8 @@
     = csrf_meta_tags
   %body{class: (controller.action_name == 'show') ? 'page-right-sidebar' : 'home page-fullwidth' }
     .site
-      = render 'layouts/site/top_nav'
+      = render 'layouts/site/header'
+      = render 'layouts/site/search'
       = yield
       = render 'layouts/site/footer'
     #modal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modal", :role => "dialog", :tabindex => "-1"}
