--- a/components/admin/app/views/layouts/admin/_nav.html.haml
+++ b/components/admin/app/views/layouts/admin/_nav.html.haml
@@ -23,6 +23,8 @@
               %a{:href => "#{properties_path}"} Imóveis
             %li.divider
             %li
+              %a{:href => "#{new_attribute_path}"} Novo atributo
+            %li
               %a{:href => "#{attributes_path}"} Atributos
         %li.dropdown
           %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
