--- a/components/admin/app/assets/stylesheets/admin/custom.css
+++ b/components/admin/app/assets/stylesheets/admin/custom.css
@@ -8,7 +8,12 @@ body {
   }
 
 }
-
+.table-properties {
+  font-size: 10px !important;
+}
+.checkbox+.checkbox,.radio+.radio  {
+  margin-top: 10px  !important;
+}
 .navbar-brand {
   padding: 10px 15px !important;
 }
