--- a/components/admin/app/views/admin/projects/_form.html.haml
+++ b/components/admin/app/views/admin/projects/_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for @project do |f|
   .row
     .col-md-4
-      = f.association :customer, include_blank: false, label_method: :label_name
+      = f.association :customer, include_blank: false, label_method: :label_name, include_blank: "selecione..."
     .col-md-4
       = f.input :image_path, as: :file
   .row
