--- a/components/admin/app/views/admin/customer_users/_form.html.haml
+++ b/components/admin/app/views/admin/customer_users/_form.html.haml
@@ -23,6 +23,12 @@
         = f.input :password_confirmation, input_html: { placeholder: "6 à 20 caracters"}
   %hr/
   .row
+    .col-md-4
+      = f.input :status, as: :select, include_blank: false
+    .col-md-8
+      = f.association :customer, label_method: :label_name, include_blank: 'selecione...', input_html: { class: 'chosen-select', multiple: true}
+  %hr/
+  .row
     .col-md-12
       = f.submit "Salvar usuário", class: 'btn btn-success', data: { disable_with: t(:disable_with)}
       = link_to "Voltar para listagem", admin_users_path, class: "btn btn-default"
