--- a/components/admin/app/views/admin/customer_users/index.html.haml
+++ b/components/admin/app/views/admin/customer_users/index.html.haml
@@ -1,9 +1,9 @@
 .panel-heading
   %h3
-    %b Listagem de usuários administradores
+    %b Listagem de usuários externos
     %br
     %small 
-      Lista de usuários internos
+      Lista de usuários externos
 %hr/
 .panel-body
   .row  
@@ -21,9 +21,9 @@
           - @users.each do |user|
             %tr 
               %td.col-md-1= user.id
-              %td= user.name
-              %td= user.email
-              %td= user.username
+              %td= user.name.downcase
+              %td= user.email.downcase
+              %td= user.username.downcase
               %td.col-md-1= user.status ? "ativo" : "inativo"
               %td.col-md-2
                 = link_to "", edit_customer_user_path(user), class: 'btn btn-success btn-xs glyphicon glyphicon-pencil'
