--- a/components/client/app/views/layouts/client/_nav.html.haml
+++ b/components/client/app/views/layouts/client/_nav.html.haml
@@ -7,7 +7,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "#{admin.root_path}"} 
+      %a.navbar-brand{:href => "#{client.root_path}"} 
         = image_tag '/images/logo/logo.png', width: 135
     / Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
@@ -36,12 +36,10 @@
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
           %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-            Nome do usuário
+            = current_user.email
             %span.caret
           %ul.dropdown-menu
             %li
-              %a{:href => "#{user_path(1)}"} Meu perfil
-            %li
-              %a{:href => "#{edit_password_path(1)}"} Trocar minha senha 
+              %a{:href => "#{edit_password_path}"} Trocar minha senha 
             %li
               %a{:href => "#{logout_sessions_path}"} Sair 
