--- a/components/site/app/views/layouts/site/_footer.html.haml
+++ b/components/site/app/views/layouts/site/_footer.html.haml
@@ -2,20 +2,18 @@
   .footer-nav
     .container
       .row
-        .col-xs-12.col-sm-6.col-md-3.footer-nav-col
+        .col-md-3
           .ft-about-us
             %h4.ft-col-title DF Aqui
+            %hr/
             .text-block
               %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue est nisi, non tristique eros scelerisque vitae. Ut sed dolor ornare, ullamcorper eros sit amet, accumsan risus.
               %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        .col-xs-12.col-sm-6.col-md-3.footer-nav-col
-          .ft-featured-properties
-            %h4.ft-col-title Imóveis Destaques
-            .featured-property
-              %ul
-        .col-xs-12.col-sm-6.col-md-3.footer-nav-col
+        .col-md-2
+        .col-md-3
           .ft-useful-links
             %h4.ft-col-title Links Úteis
+            %hr/
             %nav.useful-links-menu{:role => "navigation"}
               %ul
                 %li.menu-item
@@ -33,6 +31,7 @@
         .col-xs-12.col-sm-6.col-md-3.footer-nav-col
           .ft-contact-info
             %h4.ft-col-title Anuncie
+            %hr/
             %ul.detail-contact-info
               %li
                 %i.fa.fa-map-marker>
@@ -40,20 +39,3 @@
               %li
                 %i.fa.fa-envelope-o>
                 %a{:href => "mailto:dfaqui@dfaqui.com"} df@dfaqui.com
-  .copyright
-    .container
-      .row
-        .col-xs-12.col-sm-6.text-block
-          © 2014 DFaqui. Todos os direitos reservados.
-          %br/
-          %span
-            Powered by
-            = succeed "." do
-              %a{:href => "http://www.geekninjas.com/", :target => "_blank", :title => "Geekninjas"} Geekninjas.com.br
-          %br/
-        .col-xs-12.col-sm-6.logo-block
-          .logo-image
-            %a{:href => "index.html"}
-              %img{:alt => "DFaqui", :src => "/images/logo/logo-footer.png"}/
-    #back-to-top.back-to-top
-      %i.fa.fa-angle-up
