--- a/components/site/app/assets/stylesheets/site/application.css
+++ b/components/site/app/assets/stylesheets/site/application.css
@@ -7,5 +7,6 @@
  *= require site/shortcode
  *= require site/home
  *= require site/citilights-shortcode
+ *= require site/color-custom
  *= require site/custom
  */
