--- a/components/admin/app/views/admin/properties/index.html.haml
+++ b/components/admin/app/views/admin/properties/index.html.haml
@@ -38,6 +38,7 @@
               %td.col-md-3= property.project.name
               %td.col-md-1= property.status ? "ativo" : "inativo"
               %td.col-md-2
+                = link_to "", property_property_images_path(property), class: 'btn btn-warning glyphicon glyphicon-picture btn-xs'
                 = link_to "", property_path(property), class: 'btn btn-success glyphicon glyphicon-share-alt btn-xs'
                 = link_to "", edit_property_path(property), class: 'btn btn-primary glyphicon glyphicon-pencil btn-xs'
                 = link_to "", property_path(property), method: :delete, data: { confirm: t(:confirm)}, class: 'btn btn-danger glyphicon glyphicon-remove btn-xs'
