--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -27,3 +27,96 @@ img {
 .fav-buttons a {
   margin-left: 25px;
 }
+
+.has-featured > .property-wrap{
+  height: 230px;
+}
+.has-featured > .property-wrap > .property-excerpt{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 125px;
+}
+.has-featured > .property-wrap > .property-excerpt > p{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 125px;
+}
+.thumb img{
+  height: 100px!important;
+}
+.image-carrosel img{
+  width: 100%;
+}
+.img-carroselmod{
+  height: 90%!important;
+  overflow: hidden;
+}
+.property-excerpt p{
+  display: none;
+}
+.thumb-featured {
+  height: 57px!important;
+  width: 70px!important;
+  overflow: hidden;
+}
+.featured-thumb-home{
+  height: 230px;
+  width: 100%!important;
+}
+.thumb-list{
+  height: 370px!important;
+}
+.tour_i{
+  background-color: #264668;
+  color: #fff;
+}
+.span-tour{
+  display: block;
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+}
+.span-tour a, .span-tour a:hover{
+  color: #fff
+}
+.mod-detail{
+  bottom:0px!important;
+}
+span.new_name, span.new_name a{
+  background-color:#19A4BF!important;
+  color:#fff!important;
+  font-size:12px;
+}
+span.new_name{
+  margin-left: 50px;
+    margin-top: -15px;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
+}
+.mod1_home{
+  display: block;
+  float: left;
+  width: 265px!important;
+  margin:10px 5px!important
+}
+.recent-properties .recent-properties-content .property-row:last-child .hentry .property-wrap, .recent-properties .recent-properties-content .property-row:last-child .hentry .property-featured{
+  width: auto;
+}
+.recent-properties .recent-properties-content .property-row .hentry .property-category,
+ .recent-properties .recent-properties-content .property-row .hentry .property-detail{
+  display: block;
+opacity: 1;
+filter: alpha(opacity=100);
+visibility: visible;
+}
+
+.recent-properties .recent-properties-content .property-row .hentry{
+  display: block!important;
+width: 50%;
+}
+.recent-properties .recent-properties-content .property-row:last-child .hentry .property-category {
+
+}
+.recent-properties .recent-properties-content .property-row:last-child .hentry .property-wrap, .recent-properties .recent-properties-content .property-row:last-child .hentry .property-featured{
+  float:left!important;
+}
