--- a/components/site/app/views/layouts/site/_header.html.haml
+++ b/components/site/app/views/layouts/site/_header.html.haml
@@ -5,7 +5,7 @@
         = image_tag '/images/logo/logo_full.png', size: '300x100'
       .col-md-4.col-md-offset-6
         .fav-buttons
-          %i.glyphicon.glyphicon-star
-          = link_to "Meus favoritos", new_session_path,  remote: true, class: 'fav-button'
+         
+          = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, new_session_path,  remote: true, class: 'fav-button'
 
           = link_to "Realizar cadastro", new_external_user_path, remote: true,  class: 'btn btn-primary'
