--- a/components/admin/app/views/admin/projects/index.html.haml
+++ b/components/admin/app/views/admin/projects/index.html.haml
@@ -33,7 +33,7 @@
               %td.col-md-1= project.id
               %td.col-md-3= project.name
               %td.col-md-3= project.customer.label_name if project.customer.present?
-              %td.col-md-2= project.image_path
+              %td.col-md-2= link_to "visualizar", project.image_path.to_s, target: '_blank' if project.image_path.present?
               %td.col-md-1= project.status ? "ativo" : "inativo"
               %td.col-md-1
                 = link_to "", edit_project_path(project), class: 'btn btn-success btn-xs glyphicon glyphicon-pencil'
