--- a/components/site/app/views/layouts/site/_header.html.haml
+++ b/components/site/app/views/layouts/site/_header.html.haml
@@ -2,7 +2,7 @@
   .main-nav-wrap.container
     .row
       .col-md-2
-        = image_tag '/images/logo/logo_full.png', size: '300x100'
+        = link_to image_tag('/images/logo/logo_full.png', size: '300x100'), site.root_path
       .col-md-4.col-md-offset-6
         .fav-buttons
          
