--- a/components/site/app/views/layouts/site/_header.html.haml
+++ b/components/site/app/views/layouts/site/_header.html.haml
@@ -5,7 +5,9 @@
         = link_to image_tag('/images/logo/logo_full.png', size: '300x100'), site.root_path
       .col-md-4.col-md-offset-6
         .fav-buttons
-         
-          = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, new_session_path,  remote: true, class: 'fav-button'
-
-          = link_to "Realizar cadastro", new_external_user_path, remote: true,  class: 'btn btn-primary'
+          
+          - if bookmark_user.present?
+            = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, bookmarks_path,  remote: true, class: 'fav-button'
+          - else
+            = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, new_session_path,  remote: true, class: 'fav-button'
+            = link_to "Realizar cadastro", new_external_user_path, remote: true,  class: 'btn btn-primary'
