--- a/components/site/app/views/site/external_users/_form.html.haml
+++ b/components/site/app/views/site/external_users/_form.html.haml
@@ -1,9 +1,13 @@
 = simple_form_for @user, remote: true do |f|
   .row
-    .col-md-12
+    .col-md-6
       %label
         %b E-mail
       = f.input :email,label: false, input_html: { placeholder: "Digite seu e-mail"}
+    .col-md-6
+      %label
+        %b Usuário de acesso
+      = f.input :username,label: false, input_html: { placeholder: "Digite seu usuário"}
   .row
     .col-md-12
       %label 
