--- a/components/site/app/views/site/external_users/_save.js.haml
+++ b/components/site/app/views/site/external_users/_save.js.haml
@@ -1,3 +1,4 @@
 - if @user.errors.any?
   $("#modal .modal-content").html("#{escape_javascript(render 'new')}")
 - else
+  $("#modal .modal-content").html("#{escape_javascript(render 'success')}")
