--- a/components/admin/app/views/admin/attributes/index.html.haml
+++ b/components/admin/app/views/admin/attributes/index.html.haml
@@ -8,6 +8,10 @@
 .panel-body
   .row    
     .col-md-12
+      = render 'form_index'
+  %hr/
+  .row    
+    .col-md-12
       %table.table.table-striped.table-hover.table-bordered
         %thead 
           %tr
