--- a/components/admin/app/views/admin/properties/_form.html.haml
+++ b/components/admin/app/views/admin/properties/_form.html.haml
@@ -62,9 +62,9 @@
   %br/
   .row
     .col-md-2
-      = f.input :rooms, as: :string, input_html: {value: f.object.rooms.present?  ? f.object.rooms : 0}
-    .col-md-2
       = f.input :unit
+    .col-md-2
+      = f.input :rooms, as: :string, input_html: {value: f.object.rooms.present?  ? f.object.rooms : 0}
     .col-md-2
       = f.input :value,as: :string, input_html: { class: 'coin_mask'}
     .col-md-2
@@ -99,10 +99,14 @@
       = f.input :elevator, as: :select, include_blank: false
     .col-md-2
       = f.input :coverage, as: :select, include_blank: false
-    .col-md-3
+    .col-md-2
       = f.input :address_link_visible, as: :select, include_blank: false
     .col-md-3
       = f.input :complement_link_visible, as: :select, include_blank: false
+  %hr/
+  .row
+    .col-md-2
+      = f.input :special, as: :select, include_blank: false
   %hr/
   .row
     .col-md-12
