--- a/components/admin/app/views/layouts/admin/_nav.html.haml
+++ b/components/admin/app/views/layouts/admin/_nav.html.haml
@@ -46,14 +46,14 @@
             %span.caret
           %ul.dropdown-menu
             %li
-              %a{:href => "#{new_admin_user_path}"} Novo administrador
+              %a{:href => "#{new_admin_user_path}"} Novo usuário administrador
             %li
-              %a{:href => "#{admin_users_path}"} Administradores
+              %a{:href => "#{admin_users_path}"} Usuários administradores
             %li.divider
             %li
-              %a{:href => "#{new_customer_user_path}"} Novo cliente
+              %a{:href => "#{new_customer_user_path}"} Novo usuário cliente
             %li
-              %a{:href => "#{customer_users_path}"} Clientes
+              %a{:href => "#{customer_users_path}"} Usuários cliente
         %li.dropdown
           %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
             Gestão geral
