--- a/components/admin/app/views/admin/blocks/index.html.haml
+++ b/components/admin/app/views/admin/blocks/index.html.haml
@@ -28,6 +28,8 @@
             %th Localidade
             %th Quadra
             %th Bloco
+            %th CEP
             %th Tour
+            %th Ações
         %tbody.block-index
           = render 'index'
